[gd_scene load_steps=29 format=2]

[ext_resource path="res://BotonSalirSeleccionado.tres" type="StyleBox" id=1]
[ext_resource path="res://BotonSalirNoSeleccionado.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/orange juice 2.0.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://InterpretarCargarPregunta.gd" type="Script" id=4]
[ext_resource path="res://Imagenes/tabla nuevo 2.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Fuente.tres" type="DynamicFont" id=6]
[ext_resource path="res://Imagenes/Ayuda (Personalizado).png" type="Texture" id=8]
[ext_resource path="res://ConfirmacionInterpretar.gd" type="Script" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/CollegiateFLF.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=5]

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=9]

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=11]

[sub_resource type="StyleBoxLine" id=12]

[sub_resource type="DynamicFont" id=13]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=16]

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=19]

[sub_resource type="DynamicFont" id=20]
size = 25
font_data = ExtResource( 3 )

[node name="InterpretarCargarPregunta" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="ColorRect" parent="."]
anchor_top = 0.0012374
anchor_right = 1.0
anchor_bottom = 1.00124
margin_top = -1.80098
margin_bottom = -1.80096
color = Color( 0.470588, 0.588235, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atras" type="Button" parent="."]
margin_left = 9.0
margin_top = 9.0
margin_right = 222.0
margin_bottom = 80.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Atras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 296.0
margin_right = 993.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
margin_left = 336.0
margin_right = 941.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0.321569, 1, 1 )
text = "Cargar pregunta de
 \"Interpretar Datos\""
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pregunta" type="Label" parent="."]
margin_left = 16.0
margin_top = 104.0
margin_right = 182.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 203.788, 70.9412 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Pregunta:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pregunta"]
margin_left = -8.0
margin_top = 44.0
margin_right = 632.0
margin_bottom = 92.0

[node name="LineEdit" type="LineEdit" parent="Pregunta"]
margin_left = -8.0
margin_top = 44.0
margin_right = 632.0
margin_bottom = 92.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabla" type="TextureRect" parent="."]
margin_left = 664.096
margin_top = 200.325
margin_right = 1271.1
margin_bottom = 707.325
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadresAnual" type="LineEdit" parent="Tabla"]
margin_left = 306.0
margin_top = 41.0
margin_right = 451.0
margin_bottom = 85.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadresMensual" type="LineEdit" parent="Tabla"]
margin_left = 456.0
margin_top = 41.0
margin_right = 601.0
margin_bottom = 86.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="ProduccionAnual" type="LineEdit" parent="Tabla"]
margin_left = 305.0
margin_top = 92.0
margin_right = 451.0
margin_bottom = 137.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="ProduccionMensual" type="LineEdit" parent="Tabla"]
margin_left = 456.0
margin_top = 92.0
margin_right = 601.0
margin_bottom = 138.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="ProductividadAnual" type="LineEdit" parent="Tabla"]
margin_left = 307.0
margin_top = 144.0
margin_right = 451.0
margin_bottom = 188.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="ProductividadMensual" type="LineEdit" parent="Tabla"]
margin_left = 456.0
margin_top = 144.0
margin_right = 601.0
margin_bottom = 189.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="VentasAnual" type="LineEdit" parent="Tabla"]
margin_left = 307.0
margin_top = 195.0
margin_right = 451.0
margin_bottom = 241.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="VentasMensual" type="LineEdit" parent="Tabla"]
margin_left = 456.0
margin_top = 196.0
margin_right = 601.0
margin_bottom = 241.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="IngresosAnual" type="LineEdit" parent="Tabla"]
margin_left = 306.0
margin_top = 247.0
margin_right = 452.0
margin_bottom = 292.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="IngresosMensual" type="LineEdit" parent="Tabla"]
margin_left = 457.0
margin_top = 248.0
margin_right = 601.0
margin_bottom = 293.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="CostosAnual" type="LineEdit" parent="Tabla"]
margin_left = 306.0
margin_top = 299.0
margin_right = 451.0
margin_bottom = 343.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="CostosMensual" type="LineEdit" parent="Tabla"]
margin_left = 456.0
margin_top = 299.0
margin_right = 601.0
margin_bottom = 344.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="BeneficioAnual" type="LineEdit" parent="Tabla"]
margin_left = 306.0
margin_top = 349.0
margin_right = 451.0
margin_bottom = 395.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="BeneficioMensual" type="LineEdit" parent="Tabla"]
margin_left = 456.0
margin_top = 350.0
margin_right = 601.0
margin_bottom = 395.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="CapitalAnual" type="LineEdit" parent="Tabla"]
margin_left = 306.0
margin_top = 402.0
margin_right = 451.0
margin_bottom = 447.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="CapitalMensual" type="LineEdit" parent="Tabla"]
anchor_top = -0.00165842
anchor_bottom = -0.00165842
margin_left = 457.0
margin_top = 403.841
margin_right = 600.0
margin_bottom = 446.841
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RentabilidadAnual" type="LineEdit" parent="Tabla"]
margin_left = 305.0
margin_top = 454.0
margin_right = 450.0
margin_bottom = 498.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RentabilidadMensual" type="LineEdit" parent="Tabla"]
margin_left = 457.0
margin_top = 454.0
margin_right = 599.0
margin_bottom = 497.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta1" type="Label" parent="."]
margin_left = 16.0
margin_top = 223.831
margin_right = 230.0
margin_bottom = 263.831
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Respuesta 1:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Respuesta1"]
margin_left = 1.0
margin_top = 40.0
margin_right = 273.0
margin_bottom = 88.0

[node name="LineEdit" type="LineEdit" parent="Respuesta1"]
margin_left = 1.0
margin_top = 40.0
margin_right = 273.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta2" type="Label" parent="."]
margin_left = 16.0
margin_top = 319.83
margin_right = 232.0
margin_bottom = 359.83
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Respuesta 2:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Respuesta2"]
margin_left = 1.0
margin_top = 40.0
margin_right = 275.0
margin_bottom = 88.0

[node name="LineEdit" type="LineEdit" parent="Respuesta2"]
margin_left = 1.0
margin_top = 40.0
margin_right = 275.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respuesta3" type="Label" parent="."]
margin_left = 16.0
margin_top = 415.83
margin_right = 231.0
margin_bottom = 455.83
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Respuesta 3:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Respuesta3"]
margin_left = 1.0
margin_top = 40.0
margin_right = 274.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Respuesta3"]
margin_left = 1.0
margin_top = 40.0
margin_right = 274.0
margin_bottom = 88.0
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabla2" type="Label" parent="."]
margin_left = 759.305
margin_top = 148.952
margin_right = 1179.31
margin_bottom = 199.952
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Datos a Interpretar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CargarPregunta" type="Button" parent="."]
margin_left = 9.0
margin_top = 642.0
margin_right = 648.0
margin_bottom = 721.0
custom_fonts/font = ExtResource( 6 )
text = "Cargar Pregunta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RespuestaCorrecta" type="Label" parent="."]
margin_left = 230.0
margin_top = 202.0
margin_right = 413.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Respuesta
Correcta"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="RespuestaCorrecta"]
margin_left = 82.0
margin_top = 78.0
margin_right = 106.0
margin_bottom = 102.0

[node name="CheckBox2" type="CheckBox" parent="RespuestaCorrecta"]
margin_left = 82.0
margin_top = 174.0
margin_right = 106.0
margin_bottom = 198.0

[node name="CheckBox3" type="CheckBox" parent="RespuestaCorrecta"]
margin_left = 82.0
margin_top = 270.0
margin_right = 106.0
margin_bottom = 294.0

[node name="Retroalimentacion" type="Label" parent="."]
margin_left = 366.522
margin_top = 205.605
margin_right = 672.522
margin_bottom = 245.605
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Retroalimentación"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Retroalimentacion"]
margin_left = 1.0
margin_top = 54.0
margin_right = 289.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Retroalimentacion"]
margin_left = 0.943817
margin_top = 54.1123
margin_right = 288.944
margin_bottom = 102.112
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Retroalimentacion"]
margin_left = 1.0
margin_top = 152.0
margin_right = 288.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Retroalimentacion"]
margin_left = -3.05176e-05
margin_top = 152.0
margin_right = 288.0
margin_bottom = 200.0
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Retroalimentacion"]
margin_top = 248.0
margin_right = 288.0
margin_bottom = 296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="Retroalimentacion"]
margin_left = -3.05176e-05
margin_top = 248.0
margin_right = 288.0
margin_bottom = 296.0
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CargarAyuda" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 512.0
margin_right = 653.0
margin_bottom = 626.0
color = Color( 0.945098, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ayuda" type="Label" parent="CargarAyuda"]
margin_left = 4.487
margin_top = 7.03826
margin_right = 122.487
margin_bottom = 47.0383
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Ayuda"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CargarAyuda"]
margin_left = 39.2929
margin_top = 42.937
margin_right = 89.2929
margin_bottom = 96.937
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CargarAyuda"]
margin_left = 152.0
margin_top = 24.0
margin_right = 592.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CargarAyuda"]
margin_left = 152.0
margin_top = 24.0
margin_right = 592.0
margin_bottom = 96.0
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirmacion2" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 202.0
margin_top = 548.859
margin_right = 402.0
margin_bottom = 634.859
window_title = "Por favor, Confirma..."
dialog_text = "¿Estas seguro que quieres 
agreguar esta pregunta??"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" type="ToolButton" parent="."]
margin_left = 10.0
margin_top = 643.0
margin_right = 647.0
margin_bottom = 720.0

[node name="SeCargo" type="AcceptDialog" parent="."]
margin_left = 428.361
margin_top = 572.693
margin_right = 590.361
margin_bottom = 630.693
window_title = "Confirmación"
dialog_text = "Se cargó su pregunta!!"
dialog_autowrap = true

[connection signal="pressed" from="Atras" to="." method="_on_Atras_pressed"]
[connection signal="pressed" from="CargarPregunta" to="." method="_on_CargarPregunta_pressed"]
[connection signal="confirmed" from="Confirmacion2" to="." method="_on_Confirmacion2_confirmed"]
[connection signal="pressed" from="ToolButton" to="Confirmacion2" method="_on_ToolButton_pressed"]
